# configlookup

./: .gitignore  README.md  helper.sh  setup.cfg
.github/workflows/: release.yml
src/configlookup/: main.py  reader.py  utils.py
src/configlookup/overrider/: abstract_overrider.py  airflow_env_overrider.py  databricks_keyvault_overrider.py  environment_overrider.py
test/: test_config_json.py  test_merge_dict.py
test/resources/: __main__.py  configlookup_test2.json  pnd_personalization_all.json
