[metadata]
name = configlookup
version = 0.1.7
author = joao tiago viegas
author_email = jtviegas.js@gmail.com
url = https://github.com/tgedr/configlookup
description = This package provides a singleton to read configuration values from json, env var, etc...
long_description = file: README.md
long_description_content_type = text/markdown
license = Unlicense
license_files = LICENSE
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7

[options]
include_package_data = True
package_dir =
    =src
packages=find:
install_requires =
    pytest
[options.packages.find]
where=src
